fix: fixed display of lists page on mobile

--- a/apps/client/src/app/modules/list/list-panel/list-panel.component.less
+++ b/apps/client/src/app/modules/list/list-panel/list-panel.component.less
@@ -1,3 +1,5 @@
+@import "../../../../theme";
+
 :host ::ng-deep .ant-collapse-header {
   // We have to important here because this is loaded after the ant css as it's dynamically generated with data.
   padding: 6px 0 6px 40px !important;
@@ -15,5 +17,8 @@
 }
 
 .amount-input {
-  width: 200px;
+  width: 150px;
+  @media @mobile {
+    width: 50px;
+  }
 }
