--- a/apps/client/src/app/pages/lists/lists/lists.component.less
+++ b/apps/client/src/app/pages/lists/lists/lists.component.less
@@ -1,5 +1,13 @@
 @import "../../../../theme";
 
+:host ::ng-deep {
+  .ant-collapse-content-box {
+    @media @mobile {
+      padding: 8px;
+    }
+  }
+}
+
 .toolbar {
   margin-bottom: 20px;
 }
