--- a/apps/client/src/styles.less
+++ b/apps/client/src/styles.less
@@ -36,6 +36,10 @@ h1, h2, h3, h4, h5 {
   }
 }
 
+.ant-layout-sider-zero-width-trigger {
+  opacity: .8;
+}
+
 .ant-select-dropdown-menu-item:hover, .ant-select-dropdown-menu-item-active, .ant-dropdown-menu-item:hover {
   background-color: rgba(255, 255, 255, .2);
 }
